# urlshortener-rest-rs

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md
src/: main.rs
