[package]
name = "urlshortener_rest"
version = "0.1.0"
authors = ["Saju Thankappan <sajuthankappan@gmail.com>"]

[dependencies]
iron = "*"
router = "*"
hyper = "*"
unicase = "*"
mount = "*"
bodyparser = "*"
serde = "*"
serde_json = "*"
serde_macros = "*"
urlshortener = { path = "../urlshortener-rs" }
